# fine-tuning-glm-ocr

./: .env.template  .gitignore  README.md  main.py  pyproject.toml
LLaMA-Factory/config/: glm_ocr_full_sft.yaml  glm_ocr_lora_sft.yaml
checkpoints/recipe_db/: kie_processor.json  ocr_extractor.json
label_studio/: VERIFY_REPORT.md  labeling_config.xml  tasks.json
label_studio/batch/: 0-94-fix.json  0-94.json  95-110.json
raw_data/scripts/: config.py  convert_data.py  get_hf.py  get_kaggle.py  get_oxen.py  get_repo.py  get_roboflow.py  get_zip.py
raw_data/scripts/recipe_db/: 1_ocr_extractor.py  2_kie_processor.py  3_label_studio_converter.py  4_final_formatter.py  _fix_annotated.py  config.py
